--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "rsuite": "^5.7.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
